First part of czech translate

--- a/9.0.0/src/main/resources/assets/pixelmoninformation/lang/en_us.json
+++ b/9.0.0/src/main/resources/assets/pixelmoninformation/lang/en_us.json
@@ -40,17 +40,17 @@
     "_comment": "== Tooltips ==",
 
     "_comment": "== Pokemon ==",
-    "gui.pokemon.caught": "Caught:",
-    "gui.pokemon.dexnum": "Pokédex Number:",
-    "gui.pokemon.evstats": "EV Stats:",
-    "gui.pokemon.evyield": "EV Yield:",
-    "gui.pokemon.generation": "Generation:",
-    "gui.pokemon.growth": "Growth:",
-    "gui.pokemon.ivstats": "IV Stats:",
+    "gui.pokemon.caught": "Již chycen:",
+    "gui.pokemon.dexnum": "Pokédex #:",
+    "gui.pokemon.evstats": "EV Staty:",
+    "gui.pokemon.evyield": "EV drop:",
+    "gui.pokemon.generation": "Generace:",
+    "gui.pokemon.growth": "Velikost:",
+    "gui.pokemon.ivstats": "IV Staty:",
     "gui.pokemon.level": "Level:",
-    "gui.pokemon.nature": "Nature:",
-    "gui.pokemon.owner": "Owner:",
-    "gui.pokemon.type": "Type:",
+    "gui.pokemon.nature": "Natura:",
+    "gui.pokemon.owner": "Majitel:",
+    "gui.pokemon.type": "Typ:",
     
     "_comment": "== NPCs ==",
     "gui.nursejoy.name": "Nurse Joy",
@@ -132,7 +132,7 @@
     "_comment": "===============",
 
     "beast_ball.ptooltip": "§65× catch rate when used on Ultra Beasts, yet only a 0.1× catch rate for any other Pokémon.",
-    "cherish_ball.ptooltip": "§e1× catch rate.",
+    "cherish_ball.ptooltip": "§e1× catch rate jako normální pokeball.",
     "dive_ball.ptooltip": "§e3.5× catch rate if the Pokémon is in water.",
     "dusk_ball.ptooltip": "§e3.5× catch rate in dark places.",
     "fast_ball.ptooltip": "§e4× catch rate on Pokémon with 100 base speed or more.",
